# qsimbench

./: .gitignore  main.py  pyproject.toml  qbenchsim.py  requirements.txt
src/: .env  config.yaml  experiment.py
src/logs/: latest
src/logs/2025-06-21_17-46-57/: jobs.txt  jobs_wrapped.txt  stats.csv
src/logs/2025-06-21_17-46-57/jobs/python3_experiment.py_with_circuit=dj_size=15_backend=aer_simulator_n_cores=5/: proc_stats.csv  stderr.txt  stdout.txt
src/logs/2025-06-21_17-46-57/jobs/python3_experiment.py_with_circuit=vqe_size=6_backend=fake_torino_n_cores=5/: proc_stats.csv
src/utils/: serialise_qc.py
